# example-api-redeem-course

./: .gitignore  README.md
dotnet/: dotnet.sln
dotnet/redeem-code-commit/: Program.cs  redeem-code-commit.csproj
dotnet/redeem-code-status/: Program.cs  redeem-code-status.csproj
go/: example-redeem-code-commit.go  example-redeem-code-status.go  go.mod  sign-key-generator
go/signature_go/: signature.go
java/: ExampleRedeemCodeCommit.java  ExampleRedeemCodeStatus.java  Main.java
nodejs/: example-redeem-code-commit.js  example-redeem-code.js  package.json  sign-key-generator.js
php/: example-redeem-code-commit.php  example-redeem-code.php  sign-key-generator.php
python/: example-redeem-code-commit.py  example-redeem-code.py  sign-key-generator.py
ruby/: example-redeem-code-commit.rb  example-redeem-code-status.rb  sign-key-generator.rb
rust/: Cargo.toml  README.md
rust/src/: lib.rs  main.rs
