[package]
name = "redeem_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = "0.12.1"
sha1 = "0.10.5"
serde_json = "1.0.93"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
chrono = "0.4.23"
